--- a/WeatherApplicationDesign/langs/hu_lang.json
+++ b/WeatherApplicationDesign/langs/hu_lang.json
@@ -10,6 +10,8 @@
   "connectionFailed": "A szerverhez való csatlakozás sikertelen!",
   "cityNotFound": "A város nem található!",
   "langSet": "Kerlek inditsd ujra hogy lasd a hatast!",
-   "customFileButton": "fájl kiválazstása"
+  "customFileButton": "fájl kiválazstása",
+  "homeLocationLabel": "Lakhely:",
+  "unitsLabel":  "Mértékegység:"
 
 }
